deploy: 583aca43448f12e7784a30abb7a8296e1b561365

--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
 <div align="center">
   <h1>🚀 Dotfiles Generator</h1>
 
-  <a href="https://github.com/ulises-jeremias/dotfiles/wiki">Docs</a> |
+  <a href="https://ulises-jeremias.github.io/dotfiles/">Docs</a> |
   <a href="#">Changelog</a> |
   <a href="https://github.com/ulises-jeremias/dotfiles/blob/master/.github/CONTRIBUTING.md">Contributing</a>
 
@@ -745,12 +745,6 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
 <li><strong>File Manager</strong>: 🃏 Thunar, a versatile file manager, allows you to navigate your file system with ease.</li>
 <li>and many more!</li>
 </ul>
-<p><img alt="Dotfiles Screen Overview" src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screen-2.jpg" />
-<img alt="Nord Two Lines" src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-nord-two-lines.png" />
-<img alt="Launchpad" src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-launchpad.png" />
-<img alt="Spotlight Dark" src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-spotlight-dark.png" />
-<img alt="Dotfiles Overview" src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/demo.gif" />
-<img alt="i3 with alacritty" src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/nvim.png" /></p>
 <p class="page" id="Dots-Scripts"></p><h1>💥 Dots Scripts Utility</h1>
 <p>In the dotfiles installation process, various scripts are added for configuring applications and modules. While these scripts are primarily used for module configuration, they can also be used independently. To simplify the management of these scripts, we provide the <code>dots-scripts</code> utility.</p>
 <p>The <code>dots-scripts</code> utility provides a convenient way to manage and execute these scripts. You can explore their functionalities and customize them as needed.</p>
