--- a/index.html
+++ b/index.html
@@ -731,6 +731,7 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
 
 <p>You might be here looking for (Linux) rice reference or to fully replicate my personal
 configuration of my favorite Window Managers and several apps as well. ❄️</p>
+<p>It&#39;s also suitable for use in <a href="https://docs.github.com/codespaces/customizing-your-codespace/personalizing-codespaces-for-your-account#dotfiles">GitHub Codespaces</a>, <a href="https://www.gitpod.io/docs/config-dotfiles">Gitpod</a>, <a href="https://code.visualstudio.com/docs/remote/containers#_personalizing-with-dotfile-repositories">VS Code Remote - Containers</a>, or even Linux distributions that are not Arch Linux.</p>
 <p>This dotfiles are backed by <a href="https://www.chezmoi.io/">Chezmoi</a> which is a dotfiles manager that is designed to be flexible and extensible. It is easy to bootstrap new machines and keep multiple machines in sync. It supports any platform that is supported by Go!</p>
 <p>Most of my dotfiles where written from scratch, but I also took inspiration from other dotfiles repositories. The highlights about my dotfiles are the following:</p>
 <ul>
