deploy: 7a6b596c7645ce776da50a81d5f8fba8b96d405f

--- a/index.html
+++ b/index.html
@@ -722,6 +722,10 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
   <a href="#">Changelog</a> |
   <a href="https://github.com/ulises-jeremias/dotfiles/blob/master/.github/CONTRIBUTING.md">Contributing</a>
 
+</div> <!-- center -->
+
+<div align="center">
+
   <a href="https://github.com/PandaFoss/Awesome-Arch"><img src="https://cdn.rawgit.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg" /></a>
   <a href="https://aur.archlinux.org/packages/dots-stable"><img src="https://img.shields.io/aur/version/dots-stable?label=AUR+Stable" /></a>
   <a href="https://aur.archlinux.org/packages/dots-git"><img src="https://img.shields.io/aur/version/dots-git?label=AUR+Development" /></a>
