deploy: 24cb9deef514afaa4a4ae554973422b6ef8c4397

--- a/index.html
+++ b/index.html
@@ -733,19 +733,19 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
 
 </div>
 
-<p>You might be here looking for (Linux) rice reference or to fully replicate my personal
-configuration of my favorite Window Managers and several apps as well. ❄️</p>
-<p>It&#39;s also suitable for use in <a href="https://docs.github.com/codespaces/customizing-your-codespace/personalizing-codespaces-for-your-account#dotfiles">GitHub Codespaces</a>, <a href="https://www.gitpod.io/docs/config-dotfiles">Gitpod</a>, <a href="https://code.visualstudio.com/docs/remote/containers#_personalizing-with-dotfile-repositories">VS Code Remote - Containers</a>, or even Linux distributions that are not Arch Linux.</p>
+<p>You might be here looking for (Linux) rice reference or to (full?) replicate my personal
+configuration of my favorite Window Managers and several apps as well. ⛄</p>
+<p>These configuration is not only suitable for Desktop Environments but also for use in <a href="https://docs.github.com/codespaces/customizing-your-codespace/personalizing-codespaces-for-your-account#dotfiles">GitHub Codespaces</a>, <a href="https://www.gitpod.io/docs/config-dotfiles">Gitpod</a>, <a href="https://code.visualstudio.com/docs/remote/containers#_personalizing-with-dotfile-repositories">VS Code Remote - Containers</a>, or even Linux distributions that are not Arch Linux.</p>
 <p>This dotfiles are backed by <a href="https://www.chezmoi.io/">Chezmoi</a> which is a dotfiles manager that is designed to be flexible and extensible. It is easy to bootstrap new machines and keep multiple machines in sync. It supports any platform that is supported by Go!</p>
-<p>Most of my dotfiles where written from scratch, but I also took inspiration from other dotfiles repositories. The highlights about my dotfiles are the following:</p>
+<p>Most were written from scratch. Some details:</p>
 <ul>
 <li><strong>Window Manager</strong> 🍱 <a href="https://i3wm.org">i3</a> and/or <a href="http://openbox.org/wiki/Main_Page">Openbox</a> and/or <a href="https://www.xfce.org/">XFCE</a>!</li>
-<li><strong>Panel</strong> 🌸 <a href="https://polybar.github.io/">Polybar</a>!</li>
+<li><strong>Panel</strong> 🌸 <a href="https://polybar.github.io/">Polybar</a> whic is a fast and easy-to-use status bar!</li>
 <li><strong>Application Launcher</strong> 🚀 <a href="https://github.com/davatorium/rofi">Rofi</a> which is blazing fast!</li>
 <li><strong>Desktop Notification</strong> 🌿 <a href="https://github.com/dunst-project/dunst">Dunst</a> which is minimalist!</li>
 <li><strong>Terminal Emulator</strong> 🌿 <a href="https://alacritty.org/">Alacritty</a> which is GPU accelerated!</li>
 <li><strong>Shell</strong> 🐚 <a href="https://zsh.org">Zsh</a> with several post-installation tweaks!</li>
-<li><strong>Compositor</strong> 🍧 <a href="https://github.com/yshui/picom">Picom</a> for that perfection topping!</li>
+<li><strong>Compositor</strong> 🍧 <a href="https://github.com/allusive-dev/compfy">Compfy</a> for that perfection topping with Animations!</li>
 <li><strong>File Manager</strong> 🃏 <a href="https://docs.xfce.org/xfce/thunar/start">Thunar</a> with a customized side pane!</li>
 <li>and many more!</li>
 </ul>
