deploy: d1cfa0159727e5a9dd28e19560f370d606850f16

--- a/index.html
+++ b/index.html
@@ -726,10 +726,10 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
 
 <div align="center">
 
-  <a href="https://github.com/PandaFoss/Awesome-Arch"><img src="https://cdn.rawgit.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg" /></a>
-  <a href="https://aur.archlinux.org/packages/dots-stable"><img src="https://img.shields.io/aur/version/dots-stable?label=AUR+Stable" /></a>
-  <a href="https://aur.archlinux.org/packages/dots-git"><img src="https://img.shields.io/aur/version/dots-git?label=AUR+Development" /></a>
-  <a href="https://github.com/ulises-jeremias/dotfiles/blob/master/LICENSE"><img src="https://img.shields.io/badge/License-MIT-blue.svg" /></a>
+<a href="https://github.com/PandaFoss/Awesome-Arch"><img src="https://cdn.rawgit.com/sindresorhus/awesome/d7305f38d29fed78fa85652e3a63e154dd8e8829/media/badge.svg" /></a>
+<a href="https://aur.archlinux.org/packages/dots-stable"><img src="https://img.shields.io/aur/version/dots-stable?label=AUR+Stable" /></a>
+<a href="https://aur.archlinux.org/packages/dots-git"><img src="https://img.shields.io/aur/version/dots-git?label=AUR+Development" /></a>
+<a href="https://github.com/ulises-jeremias/dotfiles/blob/master/LICENSE"><img src="https://img.shields.io/badge/License-MIT-blue.svg" /></a>
 
 </div>
 
@@ -749,12 +749,12 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 <li><strong>File Manager</strong> 🃏 <a href="https://docs.xfce.org/xfce/thunar/start">Thunar</a> with a customized side pane!</li>
 <li>and many more!</li>
 </ul>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screen-2.jpg" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-nord-two-lines.png" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-launchpad.png" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-spotlight-dark.png" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/demo.gif" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/nvim.png" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screen-2.jpg?raw=true" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-nord-two-lines?raw=true.png" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-launchpad.png?raw=true" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-spotlight-dark?raw=true.png" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/demo.gif?raw=true" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/nvim.png?raw=true" /></p>
 <p class="page" id="Dots-Backup"></p><h1>📁 Dots Backup Tool</h1>
 <p>This documentation is not ready yet. Please come back later or ask for help in the <a href="https://github.com/ulises-jeremias/dotfiles/discussions">Discussions</a> section!</p>
 <p class="page" id="Customization"></p><h1>🎨 Customization</h1>
@@ -773,10 +773,10 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 </ol>
 <h2 id="examples">Examples</h2>
 <p>Here are some examples of customizations made using the dotfiles:</p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/nvim.png" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-launchpad.png" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-spotlight-dark.png" /></p>
-<p><img src="https://raw.githubusercontent.com/ulises-jeremias/dotfiles/master/static/screenshot-nord-two-lines.png" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/nvim.png?raw=true" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-launchpad.png?raw=true" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-spotlight-dark.png?raw=true" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-nord-two-lines.png?raw=true" /></p>
 <p>Feel free to customize and personalize your dotfiles to suit your preferences and workflow!</p>
 <p class="page" id="Window-Managers"></p><h1>🪟 Window Manager</h1>
 <p>🖌️ You can customize the installed window managers, including i3, Openbox, and XFCE4, to suit your preferences and workflow. Here&#39;s how you can customize each of them:</p>
@@ -805,9 +805,9 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 <li>Open the application menu by clicking on the menu icon in the panel or by pressing the Super key.</li>
 <li>Search for &quot;Settings Manager&quot; and click on it to open the manager.</li>
 </ol>
-<p><img src="https://raw.githubusercontent.com/wiki/ulises-jeremias/dotfiles/images/settings-manager-open.gif" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/docs/images/settings-manager-open.gif?raw=true" /></p>
 <p>The XFCE4 Settings Manager window will open, providing a range of options for customization.</p>
-<p><img src="https://raw.githubusercontent.com/wiki/ulises-jeremias/dotfiles/images/settings.jpg" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/docs/images/settings.jpg?raw=true" /></p>
 <p>In the XFCE4 Settings Manager, you can customize various settings, including:</p>
 <ul>
 <li>Keyboard shortcuts</li>
@@ -933,7 +933,7 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 <h2 id="configuring-openbox">Configuring Openbox</h2>
 <p>To simplify the configuration process, you can use <code>obconf</code>, a graphical configuration tool designed specifically for Openbox. <code>obconf</code> provides an intuitive interface that allows you to easily customize various aspects of Openbox, including window appearance, desktop settings, mouse behavior, and more.</p>
 <p>If <code>obconf</code> is available in your package manager, you can install it using the appropriate installation command for your operating system. Once installed, you can launch <code>obconf</code> and explore the wide range of customization options it offers.</p>
-<p><img src="https://raw.githubusercontent.com/wiki/ulises-jeremias/dotfiles/images/obconf.jpg" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/docs/images/obconf.jpg?raw=true" /></p>
 <p>Using <code>obconf</code>, you can conveniently tweak and adjust Openbox without directly modifying the configuration files. This makes it easy to experiment, fine-tune your settings, and create a seamless desktop experience tailored to your workflow.</p>
 <p>If <code>obconf</code> is not available in your package manager, don&#39;t worry! You can still configure Openbox by manually editing the configuration files located at <code>~/.config/openbox</code>. These files provide detailed control over various aspects of Openbox&#39;s behavior, allowing you to customize window placement, keybindings, desktop menus, and much more.</p>
 <p>Remember to save your configuration changes and restart Openbox for the modifications to take effect. This will ensure that your personalized Openbox setup is applied and ready to enhance your productivity and workflow.</p>
@@ -956,7 +956,7 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 </li>
 </ol>
 <p>Here&#39;s a glimpse of how <code>alacritty-themes</code> works:</p>
-<p><img src="https://raw.githubusercontent.com/wiki/ulises-jeremias/dotfiles/images/alacritty-themes.gif" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/docs/images/alacritty-themes.gif?raw=true" /></p>
 <p>By using <code>alacritty-themes</code>, you can effortlessly personalize your Alacritty terminal with stunning visual styles, enhancing both the aesthetics and functionality of your command-line environment.</p>
 <p>Experience the speed, flexibility, and beauty of Alacritty, combined with a rich collection of themes, to create a truly delightful and tailored terminal experience.</p>
 <p class="page" id="Apps-Launcher"></p><h1>Apps Launcher</h1>
@@ -1005,6 +1005,7 @@ Example file content:
 ZSH_NO_DEFAULT_PROMPT=true</code>
 
 This will prevent the default prompt from being loaded, but the default configuration will still be loaded.
+
 </details>
 
 <details>
@@ -1025,6 +1026,7 @@ source &quot;${HOME}&quot;/.antigen.zsh
 antigen apply</code>
 
 This file will be automatically sourced.
+
 </details>
 
 <details>
@@ -1041,6 +1043,7 @@ source /usr/share/zsh-theme-powerlevel10k/powerlevel10k.zsh-theme
 [ ! -f ~/.p10k.zsh ] || source ~/.p10k.zsh</code>
 
 This file will be automatically sourced.
+
 </details>
 
 <details>
@@ -1070,6 +1073,7 @@ Make sure to replace <code>/your/oh-my-zsh/path</code> with the actual path to y
 With these steps, you can easily integrate Oh My Zsh into your dotfiles setup and take advantage of its powerful features and community-driven plugins and themes.
 
 Feel free to explore the Oh My Zsh documentation and customize your shell experience to suit your needs and preferences. Happy customizing! ✨🚀
+
 </details>
 <p class="page" id="Dots-Eject"></p><h1>⏏️ Dots Eject</h1>
 <p>We encourage you to use <a href="https://www.chezmoi.io/">Chezmoi</a> as a tool to keep your dotfiles always updated and maintain a consistent configuration across your systems. However, we understand that there may be situations where you want to have your own independent distribution of dotfiles.</p>
