deploy: 518fddfdd4477ca3b53930bee66f405f0ff8386c

--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@ This is a journey, not a destination, and I am open to any input.</p>
 
 </br>
 
-- Manually keeping system up to date using the OS package manager. I use Arch btw so I run <code>yay -Syyu</code> every day.
+- Manually keeping system up to date using the OS package manager. <a href="https://wiki.archlinux.org/title/Arch_Linux">I use Arch, btw</a> so I run <code>yay -Syyu</code> every day.
 - Malware scanning and database updating (<a href="https://github.com/Cisco-Talos/clamav">clamav</a>)
 - Firewall (<a href="https://wiki.archlinux.org/title/Uncomplicated_Firewall">ufw</a>)
 - Ban IPs (<a href="https://github.com/fail2ban/fail2ban">fail2ban</a>)
