deploy: 8444b40fdbf88041b88b418ebe0af5292a5c8536

--- a/index.html
+++ b/index.html
@@ -1078,19 +1078,31 @@ Feel free to explore the Oh My Zsh documentation and customize your shell experi
 <p class="page" id="Security"></p><h1>🛡️ Privacy and Security</h1>
 <p>Although I like making it look as nice as possible, these dotfiles also try to be private and secure.
 This is a journey, not a destination, and I am open to any input.</p>
-<details>
+<details open>
 
 <summary>🛡️ Measures</summary>
 
-</br>
-
 - Manually keeping system up to date using the OS package manager. <a href="https://wiki.archlinux.org/title/Arch_Linux">I use Arch, btw</a> so I run <code>yay -Syyu</code> every day.
+
+
 - Malware scanning and database updating (<a href="https://github.com/Cisco-Talos/clamav">clamav</a>)
+
+
 - Firewall (<a href="https://wiki.archlinux.org/title/Uncomplicated_Firewall">ufw</a>)
+
+
 - Ban IPs (<a href="https://github.com/fail2ban/fail2ban">fail2ban</a>)
+
+
 - Using <a href="https://github.com/signalapp">Signal</a> (when possible)
+
+
 - Hosting API keys in a private repo
+
+
 - I could install the hardened Linux kernel, but that might be slightly pedantic...
+
+
 - Port scanning (<a href="https://github.com/nmap/nmap">nmap</a>, <a href="https://github.com/RustScan/RustScan">rustscan</a>)
 
 </details>
