--- a/index.html
+++ b/index.html
@@ -1078,34 +1078,16 @@ Feel free to explore the Oh My Zsh documentation and customize your shell experi
 <p class="page" id="Security"></p><h1>🛡️ Privacy and Security</h1>
 <p>Although I like making it look as nice as possible, these dotfiles also try to be private and secure.
 This is a journey, not a destination, and I am open to any input.</p>
-<details open>
-
-<summary>🛡️ Measures</summary>
-
-- Manually keeping system up to date using the OS package manager. <a href="https://wiki.archlinux.org/title/Arch_Linux">I use Arch, btw</a> so I run <code>yay -Syyu</code> every day.
-
-
-- Malware scanning and database updating (<a href="https://github.com/Cisco-Talos/clamav">clamav</a>)
-
-
-- Firewall (<a href="https://wiki.archlinux.org/title/Uncomplicated_Firewall">ufw</a>)
-
-
-- Ban IPs (<a href="https://github.com/fail2ban/fail2ban">fail2ban</a>)
-
-
-- Using <a href="https://github.com/signalapp">Signal</a> (when possible)
-
-
-- Hosting API keys in a private repo
-
-
-- I could install the hardened Linux kernel, but that might be slightly pedantic...
-
-
-- Port scanning (<a href="https://github.com/nmap/nmap">nmap</a>, <a href="https://github.com/RustScan/RustScan">rustscan</a>)
-
-</details>
+<ul>
+<li>Manually keeping system up to date using the OS package manager. <a href="https://wiki.archlinux.org/title/Arch_Linux">I use Arch, btw</a> so I run <code>yay -Syyu</code> every day.</li>
+<li>Malware scanning and database updating (<a href="https://github.com/Cisco-Talos/clamav">clamav</a>)</li>
+<li>Firewall (<a href="https://wiki.archlinux.org/title/Uncomplicated_Firewall">ufw</a>)</li>
+<li>Ban IPs (<a href="https://github.com/fail2ban/fail2ban">fail2ban</a>)</li>
+<li>Using <a href="https://github.com/signalapp">Signal</a> (when possible)</li>
+<li>Hosting API keys in a private repo</li>
+<li>I could install the hardened Linux kernel, but that might be slightly pedantic...</li>
+<li>Port scanning (<a href="https://github.com/nmap/nmap">nmap</a>, <a href="https://github.com/RustScan/RustScan">rustscan</a>)</li>
+</ul>
 <p class="page" id="Dots-Eject"></p><h1>⏏️ Dots Eject</h1>
 <p>We encourage you to use <a href="https://www.chezmoi.io/">Chezmoi</a> as a tool to keep your dotfiles always updated and maintain a consistent configuration across your systems. However, we understand that there may be situations where you want to have your own independent distribution of dotfiles.</p>
 <p>To eject from Chezmoi and create your own dotfiles distribution, you can follow the steps documented in the guide <a href="https://www.chezmoi.io/user-guide/advanced/migrate-away-from-chezmoi/">Migrate away from chezmoi</a>.</p>
