deploy: abca32220cafac04894749c7efa95ba7c3702086

--- a/index.html
+++ b/index.html
@@ -750,9 +750,9 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 <li>and many more!</li>
 </ul>
 <p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screen-2.jpg?raw=true" /></p>
-<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-nord-two-lines?raw=true.png" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-nord-two-lines.png?raw=true" /></p>
 <p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-launchpad.png?raw=true" /></p>
-<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-spotlight-dark?raw=true.png" /></p>
+<p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screenshot-spotlight-dark.png?raw=true" /></p>
 <p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/demo.gif?raw=true" /></p>
 <p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/nvim.png?raw=true" /></p>
 <p class="page" id="Dots-Backup"></p><h1>📁 Dots Backup Tool</h1>
