deploy: 6c961e80671975dad8e7261bd9ba53d0c864636a

--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,8 @@ This is a journey, not a destination, and I am open to any input.</p>
 <li>Firewall (<a href="https://wiki.archlinux.org/title/Uncomplicated_Firewall">ufw</a>)</li>
 <li>Ban IPs (<a href="https://github.com/fail2ban/fail2ban">fail2ban</a>)</li>
 <li>Using <a href="https://github.com/signalapp">Signal</a> (when possible)</li>
-<li>Hosting API keys in a private repo</li>
+<li>Using a password manager. For this dotfiles repo, I use <a href="https://www.lastpass.com/">LastPass</a>, but I&#39;ll probably switch to <a href="https://bitwarden.com/">Bitwarden</a> soon!</li>
+<li>Hosting API keys in a private repo, encrypted file or a password manager.</li>
 <li>I could install the hardened Linux kernel, but that might be slightly pedantic...</li>
 <li>Port scanning (<a href="https://github.com/nmap/nmap">nmap</a>, <a href="https://github.com/RustScan/RustScan">rustscan</a>)</li>
 </ul>
