deploy: 1c86acf40a043dd44693e3a96dbd67b3307b9d45

--- a/index.html
+++ b/index.html
@@ -1078,12 +1078,10 @@ Feel free to explore the Oh My Zsh documentation and customize your shell experi
 This is a journey, not a destination, and I am open to any input.</p>
 <ul>
 <li>Manually keeping system up to date using the OS package manager. <a href="https://wiki.archlinux.org/title/Arch_Linux">I use Arch, btw</a> so I run <code>yay -Syyu</code> every day.</li>
-<li>Malware scanning and database updating (<a href="https://github.com/Cisco-Talos/clamav">clamav</a>)</li>
+<li>Malware scanning and database updating (<a href="https://github.com/Cisco-Talos/clamav">clamav</a>).</li>
 <li>Firewall (<a href="https://wiki.archlinux.org/title/Uncomplicated_Firewall">ufw</a>)</li>
 <li>Ban IPs (<a href="https://github.com/fail2ban/fail2ban">fail2ban</a>)</li>
-<li>Using <a href="https://github.com/signalapp">Signal</a> (when possible)</li>
-<li>Using a password manager. For this dotfiles repo, I use <a href="https://www.lastpass.com/">LastPass</a>, but I am considering switching to <a href="https://bitwarden.com/">Bitwarden</a>.</li>
-<li>Hosting API keys in a private repo, encrypted file or a password manager.</li>
+<li>Using a Password Manager. I use <a href="https://www.lastpass.com/">LastPass</a>, but I am considering switching to <a href="https://bitwarden.com/">Bitwarden</a>.</li>
 <li>I could install the hardened Linux kernel, but that might be slightly pedantic...</li>
 <li>Port scanning (<a href="https://github.com/nmap/nmap">nmap</a>, <a href="https://github.com/RustScan/RustScan">rustscan</a>)</li>
 </ul>
