deploy: 22b38bf6922005a710bf12aa2eea69ab8b5d3c6b

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 <li><strong>Desktop Notification</strong> 🌿 <a href="https://github.com/dunst-project/dunst">Dunst</a> which is minimalist!</li>
 <li><strong>Terminal Emulator</strong> 🌿 <a href="https://alacritty.org/">Alacritty</a> which is GPU accelerated!</li>
 <li><strong>Shell</strong> 🐚 <a href="https://zsh.org">Zsh</a> with several post-installation tweaks!</li>
-<li><strong>Compositor</strong> 🍧 <a href="https://github.com/allusive-dev/compfy">Compfy</a> for that perfection topping with Animations!</li>
+<li><strong>Compositor</strong> 🍧 <a href="https://github.com/FT-Labs/picom">Picom fork by FT-Labs</a> for that perfection topping with Animations!</li>
 <li><strong>File Manager</strong> 🃏 <a href="https://docs.xfce.org/xfce/thunar/start">Thunar</a> with a customized side pane!</li>
 <li>and many more!</li>
 </ul>
