deploy: e4914352078fac639c873d5e595b6e150bbdda23

--- a/index.html
+++ b/index.html
@@ -740,13 +740,14 @@ configuration of my favorite Window Managers and several apps as well. ⛄</p>
 <p>Most were written from scratch. Some details:</p>
 <ul>
 <li><strong>Window Manager</strong> 🍱 <a href="https://i3wm.org">i3</a> and/or <a href="http://openbox.org/wiki/Main_Page">Openbox</a> and/or <a href="https://www.xfce.org/">XFCE</a>!</li>
-<li><strong>Panel</strong> 🌸 <a href="https://polybar.github.io/">Polybar</a> whic is a fast and easy-to-use status bar!</li>
+<li><strong>Panel</strong> 🌸 <a href="https://polybar.github.io/">Polybar</a> which is a fast and easy-to-use status bar!</li>
 <li><strong>Application Launcher</strong> 🚀 <a href="https://github.com/davatorium/rofi">Rofi</a> which is blazing fast!</li>
 <li><strong>Desktop Notification</strong> 🌿 <a href="https://github.com/dunst-project/dunst">Dunst</a> which is minimalist!</li>
 <li><strong>Terminal Emulator</strong> 🌿 <a href="https://alacritty.org/">Alacritty</a> which is GPU accelerated!</li>
 <li><strong>Shell</strong> 🐚 <a href="https://zsh.org">Zsh</a> with several post-installation tweaks!</li>
 <li><strong>Compositor</strong> 🍧 <a href="https://github.com/FT-Labs/picom">Picom fork by FT-Labs</a> for that perfection topping with Animations!</li>
 <li><strong>File Manager</strong> 🃏 <a href="https://docs.xfce.org/xfce/thunar/start">Thunar</a> with a customized side pane!</li>
+<li><strong>Widgets</strong> 🎨 <a href="https://github.com/elkowar/eww">Eww</a> with 2 different pre-backed widgets!</li>
 <li>and many more!</li>
 </ul>
 <p><img src="https://github.com/ulises-jeremias/dotfiles/blob/master/static/screen.png?raw=true" /></p>
