deploy: 32b7a9729051a8d0f8ebfb36506722f8003baee3

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
         <div class="col-md-9">
 <p class="page" id="Home"></p><h1>🏠 Home</h1>
 <div align="center">
-  <h1>🚀 Dotfiles Generator</h1>
+  <h1>🏠 HorneroConfig - Comprehensive Dotfiles Framework</h1>
 
   <a href="https://ulises-jeremias.github.io/dotfiles">Docs</a> |
   <a href="#">Changelog</a> |
@@ -735,8 +735,15 @@ if("undefined"==typeof jQuery)throw new Error("Bootstrap's JavaScript requires j
 
 <p>You might be here looking for (Linux) rice reference or to (full?) replicate my personal
 configuration of my favorite Window Managers and several apps as well. ⛄</p>
-<p>These configuration is not only suitable for Desktop Environments but also for use in <a href="https://docs.github.com/codespaces/customizing-your-codespace/personalizing-codespaces-for-your-account#dotfiles">GitHub Codespaces</a>, <a href="https://www.gitpod.io/docs/config-dotfiles">Gitpod</a>, <a href="https://code.visualstudio.com/docs/remote/containers#_personalizing-with-dotfile-repositories">VS Code Remote - Containers</a>, or even Linux distributions that are not Arch Linux.</p>
-<p>This dotfiles are backed by <a href="https://www.chezmoi.io/">Chezmoi</a> which is a dotfiles manager that is designed to be flexible and extensible. It is easy to bootstrap new machines and keep multiple machines in sync. It supports any platform that is supported by Go!</p>
+<p>HorneroConfig is your artisanal toolkit for crafting the perfect digital workspace.
+Named after the industrious hornero bird, renowned for its skillful nest-building,
+our framework empowers you to construct a robust, functional, and personalized computing environment.</p>
+<p>Perfectly suited for a wide array of Desktop Environments and Window Managers,
+HorneroConfig thrives across different platforms including <a href="https://docs.github.com/codespaces/customizing-your-codespace/personalizing-codespaces-for-your-account#dotfiles">GitHub Codespaces</a>, <a href="https://www.gitpod.io/docs/config-dotfiles">Gitpod</a>, <a href="https://code.visualstudio.com/docs/remote/containers#_personalizing-with-dotfile-repositories">VS Code Remote - Containers</a>, or even Linux distributions that are not Arch Linux.</p>
+<p>Backed by the versatile <a href="https://www.chezmoi.io/">Chezmoi</a>, HorneroConfig stands out as a dotfiles manager
+that adapts flexibly to your needs, streamlining machine setup and ensuring consistency across devices.
+Embrace the spirit of the hornero, and let HorneroConfig transform your configurations
+into a harmonious blend of elegance and efficiency.</p>
 <p>Most were written from scratch. Some details:</p>
 <ul>
 <li><strong>Window Manager</strong> 🍱 <a href="https://i3wm.org">i3</a> and/or <a href="http://openbox.org/wiki/Main_Page">Openbox</a> and/or <a href="https://www.xfce.org/">XFCE</a>!</li>
