deploy: 92b14329299f0d8cc5123471efcef9c21565a079

--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ into a harmonious blend of elegance and efficiency.</p>
 <li><strong>Desktop Notification</strong> 🌿 <a href="https://github.com/dunst-project/dunst">Dunst</a> which is minimalist!</li>
 <li><strong>Terminal Emulator</strong> 🌿 <a href="https://alacritty.org/">Alacritty</a> which is GPU accelerated!</li>
 <li><strong>Shell</strong> 🐚 <a href="https://zsh.org">Zsh</a> with several post-installation tweaks!</li>
-<li><strong>Compositor</strong> 🍧 <a href="https://github.com/FT-Labs/picom">Picom fork by FT-Labs</a> for that perfection topping with Animations!</li>
+<li><strong>Compositor</strong> 🍧 <a href="https://github.com/yshui/picom">Picom</a> for that perfection topping with Animations!</li>
 <li><strong>File Manager</strong> 🃏 <a href="https://docs.xfce.org/xfce/thunar/start">Thunar</a> with a customized side pane!</li>
 <li><strong>Widgets</strong> 🎨 <a href="https://github.com/elkowar/eww">Eww</a> with 2 different pre-backed widgets!</li>
 <li>and many more!</li>
