deploy: fbdf43690de25563ddebbdcbec4ed2b619f7f93f

--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@ chezmoi apply</pre><p>For more info, check the <a href="https://wiki.hyprland.or
 <td>Center floating window</td>
 </tr>
 <tr>
-<td><code>Super+T</code></td>
+<td><code>Super+Space</code></td>
 <td>Toggle tiling/floating</td>
 </tr>
 <tr>
@@ -1095,6 +1095,14 @@ chezmoi apply</pre><p>For more info, check the <a href="https://wiki.hyprland.or
 <tr>
 <td><code>Super+C</code></td>
 <td>Focus child (group)</td>
+</tr>
+<tr>
+<td><code>Super+U</code></td>
+<td>Promote focused window to its own column (scrolling layout)</td>
+</tr>
+<tr>
+<td><code>Super+&#39;</code></td>
+<td>Toggle focus fit mode (center ↔ fit)</td>
 </tr>
 </tbody>
 </table>
@@ -1260,7 +1268,7 @@ chezmoi apply</pre><p>For more info, check the <a href="https://wiki.hyprland.or
 </tr>
 </tbody>
 </table>
-<h2 id="layouts-and-splits">Layouts and Splits</h2>
+<h2 id="scrolling-layout-niri-style-">Scrolling Layout (Niri-style)</h2>
 <table>
 <thead>
 <tr>
@@ -1271,19 +1279,35 @@ chezmoi apply</pre><p>For more info, check the <a href="https://wiki.hyprland.or
 <tbody>
 <tr>
 <td><code>Super+Alt+H</code></td>
-<td>Set horizontal split direction</td>
+<td>Move layout viewport one column to the left</td>
 </tr>
 <tr>
-<td><code>Super+Alt+V</code></td>
-<td>Set vertical split direction</td>
+<td><code>Super+Alt+L</code></td>
+<td>Move layout viewport one column to the right</td>
 </tr>
 <tr>
-<td><code>Super+W</code></td>
-<td>Toggle layout (dwindle/master)</td>
+<td><code>Super+Alt+,</code></td>
+<td>Swap active column with left neighbor</td>
 </tr>
 <tr>
-<td><code>Super+S</code></td>
-<td>Toggle split direction</td>
+<td><code>Super+Alt+.</code></td>
+<td>Swap active column with right neighbor</td>
+</tr>
+<tr>
+<td><code>Super+Alt+-</code> / <code>Super+Alt+=</code></td>
+<td>Decrease/increase column width preset</td>
+</tr>
+<tr>
+<td><code>Super+Alt+Shift+-</code> / <code>Super+Alt+Shift+=</code></td>
+<td>Fine resize column width</td>
+</tr>
+<tr>
+<td><code>Super+Alt+F</code></td>
+<td>Fit active column into view</td>
+</tr>
+<tr>
+<td><code>Super+Alt+Shift+F</code></td>
+<td>Fit visible columns into view</td>
 </tr>
 </tbody>
 </table>
