deploy: 2dab6157df7d8882c1a201f94d40ff2ef903e36b

--- a/index.html
+++ b/index.html
@@ -1104,6 +1104,18 @@ chezmoi apply</pre><p>For more info, check the <a href="https://wiki.hyprland.or
 <td><code>Super+&#39;</code></td>
 <td>Toggle focus fit mode (center ↔ fit)</td>
 </tr>
+<tr>
+<td><code>Super+Ctrl+W</code></td>
+<td>Toggle layout profile (scrolling ↔ dwindle)</td>
+</tr>
+<tr>
+<td><code>Super+Ctrl+Shift+W</code></td>
+<td>Force scrolling profile</td>
+</tr>
+<tr>
+<td><code>Super+Ctrl+Alt+W</code></td>
+<td>Force dwindle profile</td>
+</tr>
 </tbody>
 </table>
 <h2 id="window-focus">Window Focus</h2>
